<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent" >


<FrameLayout
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">
</FrameLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:orientation="vertical"
        >

        <EditText android:id="@+id/operand_one_edit_text"
                  android:hint="@string/type_operand_one_hint"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"/>

        <EditText android:id="@+id/operand_two_edit_text"
                  android:hint="@string/type_operant_two_hint"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button android:id="@+id/operation_add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_operation_text"
                    android:onClick="onAdd"/>

            <Button android:id="@+id/operation_sub_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_operation_text"
                    android:layout_toRightOf="@id/operation_add_btn"
                    android:layout_toEndOf="@id/operation_add_btn"
                    android:onClick="onSub"/>

            <Button android:id="@+id/operation_div_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/div_operation_text"
                    android:layout_below="@id/operation_add_btn"
                    android:onClick="onDiv"/>

            <Button android:id="@+id/operation_mul_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mul_operation_text"
                    android:layout_below="@id/operation_add_btn"
                    android:layout_toRightOf="@id/operation_add_btn"
                    android:layout_toEndOf="@id/operation_add_btn"
                    android:onClick="onMul"/>

        </RelativeLayout>

        <TextView android:id="@+id/operation_result_text_view"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    &lt;!&ndash; Name Label &ndash;&gt;
    <TextView
        android:id="@+id/lblName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="10dip"/>

    &lt;!&ndash; Email Label &ndash;&gt;
    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginBottom="40dip"/>

    &lt;!&ndash; Button to show session data &ndash;&gt;

    <TextView
        android:id="@+id/btnLogout"
        style="?android:textAppearanceSmall"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:nextFocusDown="@+id/forgot_txv"
        android:background="@drawable/rounded_square_blue"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/Log_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>


</LinearLayout>-->
