...
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operant_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>

    <array name="icons">
        <item>@drawable/profile</item>
        <item>@drawable/community</item>
        <item>@drawable/message</item>
        <item>@drawable/ride_tokens</item>
...
